--- a/Registro/app/src/main/res/layout/digital_code_fragment.xml
+++ b/Registro/app/src/main/res/layout/digital_code_fragment.xml
@@ -31,6 +31,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
+        <TextView
+            android:id="@+id/txtCode"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
+            android:visibility="invisible"
+            android:text="Este es tu código de Identificación personal, Gracias por tu confianza."/>
     </LinearLayout>
     <LinearLayout
         android:id="@+id/llyBoton"
