--- a/Registro/app/src/main/res/layout/signature_fragment.xml
+++ b/Registro/app/src/main/res/layout/signature_fragment.xml
@@ -11,13 +11,15 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="90">
+
+
         <RelativeLayout
             android:id="@+id/rlPanel"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp">
-
 
         </RelativeLayout>
 
