--- a/SRSP/app/src/main/res/values/styles.xml
+++ b/SRSP/app/src/main/res/values/styles.xml
@@ -7,5 +7,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+    <style name="MycheckBoxStyle" parent="Base.Widget.AppCompat.CompoundButton.CheckBox">
+        <item name="android:colorControlNormal">@color/gray</item>
+        <item name="android:colorControlActivated">@color/gree_ligth</item>
+    </style>
 </resources>
